# tgbot

./: .gitignore  Makefile  README.md  config.json.example  pyproject.toml
src/crypto_telegram_bot/: config.py  group_ids.py  id_helper.py  main.py
sys/: install.sh  tgbot  tgbot.service
