[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crypto-telegram-bot"
version = "0.1.0"
description = "Telegram bot for monitoring and filtering crypto-related messages"
dependencies = ["telethon>=1.34.0", "pytz"]

[project.optional-dependencies]
dev = ["isort", "ruff"]

[tool.hatch.build.targets.wheel]
packages = ["src/crypto_telegram_bot"]

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[project.scripts]
tg-bot = "crypto_telegram_bot.main:main"
get-id-cli = "crypto_telegram_bot.id_helper:get_user_info_cli"
auth-cli = "crypto_telegram_bot.config:auth_cli"
