[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto-telegram-bot"
version = "0.1.0"
description = "Telegram bot for monitoring and filtering crypto-related messages"
dependencies = ["telethon>=1.34.0"]

[project.optional-dependencies]
dev = ["isort", "ruff"]

[project.scripts]
tg-bot = "crypto_telegram_bot.main:main"
get-id-cli = "crypto_telegram_bot.id_helper:get_user_info_cli"
get-groups = "crypto_telegram_bot.group_ids:main"
auth-cli = "crypto_telegram_bot.config:auth_cli"

[tool.ruff]
line-length = 110

[tool.isort]
profile = "black"
line_length = 110
